--- a/School.UI/Views/GradeClass/_TableGradeClass.cshtml
+++ b/School.UI/Views/GradeClass/_TableGradeClass.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <table id="tableId" class="table" style="border:1px solid silver;">
-    <thead style="background-color:rgb(240, 240, 240);">
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.GradeId)
