--- a/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
+++ b/School.UI/Views/Shared/_PartialLayoutMenu.cshtml
@@ -164,7 +164,7 @@
 
 
             <li class="treeview" id="menu-student-maint" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+                <a href="#"  class="menu-st">
                     <i class="fa fa-users"></i>
                     <span class="menu-header-name">Students Maintanance</span>
                     <span class="pull-right-container">
@@ -178,7 +178,7 @@
                 </ul>
             </li>
             <li class="treeview" id="menu-student-reg" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+                <a href="#"  class="menu-st">
                     <i class="fa fa-folder-open"></i>
                     <span class="menu-header-name">Students Registration</span>
                     <span class="pull-right-container">
@@ -207,7 +207,7 @@
                 </ul>
             </li>
             <li class="treeview" id="menu-grade" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+                <a href="#"  class="menu-a">
                     <i class="fa fa-book"></i>
                     <span class="menu-header-name">Grades</span>
                     <span class="pull-right-container">
@@ -220,7 +220,7 @@
                 </ul>
             </li>
             <li class="treeview" id="menu-class" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+                <a href="#" class="menu-a">
                     <i class="fa fa-book"></i>
                     <span class="menu-header-name">Classes</span>
                     <span class="pull-right-container">
@@ -234,7 +234,7 @@
             </li>
 
             <li class="treeview" id="menu-subject" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+                <a href="#" class="menu-a">
                     <i class="fa fa-bookmark"></i>
                     <span class="menu-header-name">Subjects</span>
                     <span class="pull-right-container">
@@ -247,8 +247,8 @@
                 </ul>
             </li>
 
-            <li class="treeview" id="menu-gradeMaintanance" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+            <li class="treeview" id="menu-gradeMaintanance" style="display:none;width:auto;">
+                <a href="#" class="menu-a">
                     <i class="fa fa-book"></i>
                     <span class="menu-header-name">Grade Maintanance</span>
                     <span class="pull-right-container">
@@ -261,7 +261,7 @@
             </li>
 
             <li class="treeview" id="menu-teacher" style="display:block;width:auto;">
-                <a href="#" class="aprovince">
+                <a href="#" class="menu-a">
                     <i class="fa fa-pencil"></i>
                     <span class="menu-header-name">Teacher Registration</span>
                     <span class="pull-right-container">
