--- a/School.UI/Views/StudentMarks/_TableSubjectMarksOnly.cshtml
+++ b/School.UI/Views/StudentMarks/_TableSubjectMarksOnly.cshtml
@@ -23,7 +23,7 @@
 </style>
 
 <table id="tableId" class="table" style="border:1px solid silver;">
-    <thead style="background-color:rgb(47, 71, 86);color:white;">
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.StudentSubjectMarks.StudentId)
