--- a/School.UI/Views/StudentResult/_ViewStudent.cshtml
+++ b/School.UI/Views/StudentResult/_ViewStudent.cshtml
@@ -2,6 +2,22 @@
 
 <style>
 
+    .PartialLayoutMenu, #menuId, #menuId .sidebar, .treeview a,
+    #layoutLeftId, #layoutLeftId .layoutLeft-header, .layoutRight-header-bottom,
+    #Home-Container #basePartialHolder .divHeader {
+        background-color: rgb(173, 128, 73);
+        background-color:rgb(173, 128, 73)
+    }
+
+        #Home-Container #basePartialHolder .divHeader p {
+            color: white;
+        }
+
+    #tableId thead {
+        background-color: rgb(173, 128, 73);
+        color: white;
+    }
+
     .card_t {
         border-radius: 2px;
         display: inline-block;
@@ -67,7 +83,7 @@
             <div  id="tableHolderId" class="col-xs-12" style="padding:15px;">
 
                 <table id="tableId" class="table" style="background-color:white; border:1px solid silver;">
-                    <thead style="background-color:rgb(240, 240, 240);">
+                    <thead>
                         <tr>
                             <th>
                                 @Html.DisplayNameFor(model => model.StudentResults.StudentId)
