--- a/School.UI/Views/Teacher/_TableTeacher.cshtml
+++ b/School.UI/Views/Teacher/_TableTeacher.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<School.Entities.Fields.Teacher>
 
 <table id="tableId" class="table">
-    <thead style="background-color: rgb(59 ,90 ,108);">
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.TeacherId)
