--- a/School.UI/Views/TeacherRegister/_ViewTeacher.cshtml
+++ b/School.UI/Views/TeacherRegister/_ViewTeacher.cshtml
@@ -63,7 +63,7 @@
             <div id="tableHolderId" class="col-xs-12" style="padding:15px;">
 
                 <table id="tableId" class="table" style="background-color:white; border:1px solid silver;">
-                    <thead style="background-color:rgb(240, 240, 240);">
+                    <thead>
                         <tr>
                             <th>
                                 @Html.DisplayNameFor(model => model.TeacherId)
