--- a/School.UI/Views/Classes/_GetRecord.cshtml
+++ b/School.UI/Views/Classes/_GetRecord.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<School.Entities.Fields.Classes>
+@{
+    School.Common.PagingHelper.Pager pager = Session["pager"] as School.Common.PagingHelper.Pager;
+}
 
 <style>
 
@@ -63,20 +66,36 @@
 
     <div class="col-md-12" style="border: 0px solid white; display: inline-block;">
         <div class="card_t card-s">
-            <div  id="tableHolderId" style="padding:15px;">
+            <div id="tableHolderId" style="padding:15px;">
 
                 <div class="myContainer col-lg-offset-10 col-xs-2 rm-pd ">
                     <input class="tablink active" id="btnAddNewRecord" type="button" value="Add New Record" style="width:130px;margin-top:5px;margin-bottom:5px;border-right:1px solid orange;" />
                 </div>
 
                 <table id="tableId" class="table" style="border:1px solid silver;">
-                    <thead style="background-color:rgb(240, 240, 240);">
+                    <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.ClassId)
+                                <div class="col-wrapper">
+                                    <div class="col-L">
+                                        @Html.DisplayNameFor(model => model.ClassId)
+                                    </div>
+                                    <div class="col-R rm-pd">
+                                        <div class="my-triangle-up"></div>
+                                        <div class="my-triangle-down"></div>
+                                    </div>
+                                </div>
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.ClassName)
+                                <div class="col-wrapper">
+                                    <div class="col-L">
+                                        @Html.DisplayNameFor(model => model.ClassName)
+                                    </div>
+                                    <div class="col-R rm-pd">
+                                        <div class="my-triangle-up"></div>
+                                        <div class="my-triangle-down"></div>
+                                    </div>
+                                </div>
                             </th>
                             <th>
                                 Edit
@@ -99,11 +118,53 @@
                             </tr>
                         }
                     </tbody>
+
+                    <tfoot class="hide-if-no-paging">
+                        <tr>
+                            <td colspan="5" class="text-center" style="border:0px solid red;">
+
+                                <div class="form-LCR">
+                                    <div class="form-L">
+                                        @{
+                                            // string lines = String.Format("Showing {0} to {1} of {2} entries", pager.StartItem, pager.LastItem, 50);
+                                            string lines = String.Format("Showing {0} to {1} of {2} entries", pager.StartPage, 10, pager.TotalItems);
+                                            <span>@lines</span>
+                                        }
+
+                                    </div>
+                                    <div class="form-C"></div>
+                                    <div class="form-R">
+                                        <ul style="width:auto;">
+                                            <li class="previous-li" style="display:block" onclick="callControllerByPage('/Student/GetRecordByPage','View Student')">
+                                                <a href="#">Previous</a>
+                                            </li>
+
+                                            @{
+                                                for (int i = 0; i < pager.TotalPages; i++)
+                                                {
+                                                    int pg = i + pager.StartPage;
+                                                    <li class="page-number" style="display:block" onclick="callControllerByPage('/Student/GetRecordByPage?page=@pg','View Student')">
+                                                        <a href="#">@pg</a>
+                                                    </li>
+                                                }
+                                            }
+
+                                            <li class="next-li" style="display:block" onclick="callController('/Student/GetRecordByPage','View Student')">
+                                                <a href="#">Next</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                            </td>
+                        </tr>
+                    </tfoot>
+
                 </table>
 
             </div>
         </div>
-    </div> 
+    </div>
 
 </div>
 
