--- a/School.UI/Views/Home/Index.cshtml
+++ b/School.UI/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     @*<link href="~/Content/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet" />*@
     <link href="~/Content/commonCSS.css" rel="stylesheet" />
     <link href="~/Content/css_mine/common.css" rel="stylesheet" />
+    <link href="~/Content/css_mine/commonTableFooter.css" rel="stylesheet" />
 </head>
 
 <style>
@@ -707,11 +708,11 @@
                         </div>
                         <div class="gridRow_0 col-xs-12" style="min-height:60px;max-height:60px;">
 
-                            <span class="fa fa-spinner fa-spin" style="font-size:44px;margin-top:2px;  margin-left:30px;color:darkblue"></span>
+                            <span class="fa fa-spinner fa-spin" style="font-size:44px;margin-top:2px;  margin-left:30px;color:white;"></span>
 
                         </div>
                         <div class="gridRowSpace  col-xs-12 rm-pd" style="min-height:10px;max-height:10px;">
-                            <p class="login-box-msg text-center message rm-pd" style="font-size:14px;color:darkblue;"> ...Still Busy...<br /> ...Please Wait ...</p>
+                            <p class="login-box-msg text-center message rm-pd" style="font-size:14px;color:white;"> ...Still Busy...<br /> ...Please Wait ...</p>
                         </div>
                         <div class="gridRow_1" style="min-height:2px;max-height:2px;">
 
