--- a/School.UI/Views/StudentMarks/_TableRecordSubjectMarksOnly.cshtml
+++ b/School.UI/Views/StudentMarks/_TableRecordSubjectMarksOnly.cshtml
@@ -9,7 +9,7 @@
                 <input id="nomberOfRows" type="hidden" value=@Model.StudentSubjectMarksList.Count() />
 
                 <table id="tableId" class="table" style="border:1px solid silver;">
-                    <thead style="background-color:rgb(47, 71, 86);color:white;">
+                    <thead>
                         <tr>
                             <th>
                                 @Html.DisplayNameFor(model => model.StudentSubjectMarks.StudentId)
